; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netgraph/atm/uni/extr_ng_uni.c_ng_uni_shutdown.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netgraph/atm/uni/extr_ng_uni.c_ng_uni_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.priv = type { i32 }

@M_NG_UNI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ng_uni_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ng_uni_shutdown(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.priv*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.priv* @NG_NODE_PRIVATE(i32 %4)
  store %struct.priv* %5, %struct.priv** %3, align 8
  %6 = load %struct.priv*, %struct.priv** %3, align 8
  %7 = getelementptr inbounds %struct.priv, %struct.priv* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @uni_destroy(i32 %8)
  %10 = load %struct.priv*, %struct.priv** %3, align 8
  %11 = load i32, i32* @M_NG_UNI, align 4
  %12 = call i32 @free(%struct.priv* %10, i32 %11)
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @NG_NODE_SET_PRIVATE(i32 %13, i32* null)
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @NG_NODE_UNREF(i32 %15)
  ret i32 0
}

declare dso_local %struct.priv* @NG_NODE_PRIVATE(i32) #1

declare dso_local i32 @uni_destroy(i32) #1

declare dso_local i32 @free(%struct.priv*, i32) #1

declare dso_local i32 @NG_NODE_SET_PRIVATE(i32, i32*) #1

declare dso_local i32 @NG_NODE_UNREF(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
